# evg-chess

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  evg-chess.gresource.xml
data/css/: close-button.css  evg-chess.css
data/ui/: close-button.ui  tab-label.ui  window.ui
po/: POTFILES.in  POTFILES.skip  de.po  ru.po
src/: Makefile.am  application.vala  board.vala  config.vapi  enums.vala  game-store.vala  game.vala  main.vala  move.vala  notebook.vala  position.vala  test-move.vala  window.vala
tests/: Makefile.am  testcase.vala  testmain.vala  testmove.vala
